first commit 41